# echo

./: .ban-globals-allowlist  .ban-nondeterminism-allowlist  .ban-unordered-abi-allowlist  .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .typos.toml  ADR-0003-Materialization-Bus.md  ADR-0004-No-Global-State.md  ADR-0005-Physics.md  ADR-0006-Ban-Non-Determinism.md  ADVANCED_GUIDE.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE-NOTES.md  CLAUDE.md  CODEOWNERS  COMING_SOON.md  CONTINUE_CLAUDE.md  CONTINUUM.md  CONTRIBUTING.md  Cargo.toml  DETERMINISM-AUDIT.md  DIND-MISSION-PHASE3.md  DIND-MISSION-PHASE5.md  DIND-MISSION.md  ECHO_ROADMAP.md  GUIDE.md  ISSUES.md  LEGAL.md  LICENSE  LICENSE-APACHE  MERGE_TTD_BRANCH_PLAN.md  METHOD.md  Makefile  (+31 more)
.cargo/: config.toml
.codex/: EVENT_LOG.md
.devcontainer/: devcontainer.json  post-create.sh
.githooks/: _timing.sh  commit-msg  pre-commit  pre-push  pre-push-parallel  pre-push-sequential  pre-rebase
.github/: PULL_REQUEST_TEMPLATE.md
.obsidian/: workspace.json
assets/: chatgpt.html  grok.html
bins/jitos-cli/: Cargo.toml  README.md
bins/jitos-cli/src/: main.rs
bins/jitosd/: Cargo.toml  README.md
bins/jitosd/src/: main.rs
blog/: aion-computing.md
crates/echo-app-core/: Cargo.toml  README.md
crates/echo-app-core/src/: config.rs  config_port.rs  lib.rs  prefs.rs  render_port.rs  toast.rs
crates/echo-cas/: Cargo.toml  README.md
crates/echo-cas/src/: disk.rs  lib.rs  memory.rs  retention.rs
crates/echo-cas/tests/: disk_tier.rs  semantic_retention.rs
crates/echo-config-fs/: Cargo.toml  README.md
crates/echo-config-fs/src/: lib.rs
crates/echo-dind-harness/: Cargo.toml  README.md
crates/echo-dind-harness/src/: dind.rs  lib.rs
crates/echo-dind-harness/tests/: coverage.rs  digest_golden_vectors.rs  permutation_invariance.rs
crates/echo-dind-tests/: Cargo.toml  README.md
crates/echo-dind-tests/src/: codecs.generated.rs  lib.rs  rules.rs  type_ids.generated.rs
crates/echo-dry-tests/: Cargo.toml  README.md
crates/echo-dry-tests/src/: config.rs  demo_rules.rs  engine.rs  footprint.rs  frames.rs  hashes.rs  lib.rs  motion.rs  rules.rs
crates/echo-edict-canonical/: Cargo.toml  README.md
crates/echo-edict-canonical/src/: lib.rs
crates/echo-edict-canonical/tests/: canonical_contract.rs
crates/echo-edict-provider-verifier/: Cargo.toml  README.md
crates/echo-edict-provider-verifier/resources/: authority-facts.echo-dpo.cbor  authority-facts.echo-lawpack.cbor  generated-artifact-profile.echo-dpo-registration.cbor  lawpack.echo-dpo.cbor  resource.lawpack-target-adapter.cbor  resource.target-operation-profiles.cbor  resource.target-verifier-contract.cbor  target-profile.echo-dpo.cbor
crates/echo-edict-provider-verifier/src/: component.rs  lib.rs  semantic_resources.rs
crates/echo-edict-provider-verifier/tests/: verifier_contract.rs
crates/echo-edict-provider-verifier/tests/fixtures/: edict-core.hex  edict-target-ir.hex
crates/echo-edict-provider-verifier/wit/: edict-target-provider.wit
crates/echo-file-aperture/: Cargo.toml  README.md
crates/echo-file-aperture/src/: lib.rs
crates/echo-file-aperture/tests/: file_aperture_tests.rs
crates/echo-graph/: Cargo.toml  README.md
crates/echo-graph/src/: lib.rs
crates/echo-kernel/: Cargo.toml  README.md
crates/echo-kernel/src/: lib.rs
crates/echo-net/: Cargo.toml  README.md
crates/echo-net/src/: lib.rs
crates/echo-registry-api/: Cargo.toml  README.md
crates/echo-registry-api/src/: lib.rs  provider.rs
crates/echo-registry-api/tests/: provider_registry.rs  semantic_operation_id_contract.rs
crates/echo-runtime-schema/: Cargo.toml  README.md
crates/echo-runtime-schema/src/: lib.rs
crates/echo-scene-codec/: Cargo.toml
crates/echo-scene-codec/src/: cbor.rs  lib.rs  mock_adapter.rs
crates/echo-scene-port/: Cargo.toml
crates/echo-scene-port/src/: camera.rs  canon.rs  highlight.rs  lib.rs  port.rs  types.rs
crates/echo-sched/: Cargo.toml  README.md
crates/echo-sched/src/: lib.rs
crates/echo-session-client/: Cargo.toml  README.md
crates/echo-session-client/examples/: publish_pulse.rs
crates/echo-session-client/src/: lib.rs  tool.rs
crates/echo-session-proto/: Cargo.toml  README.md
crates/echo-session-proto/src/: canonical.rs  eint_v2.rs  integrity_tests.rs  lib.rs  ttdr_v2.rs  wire.rs
crates/echo-session-service/: Cargo.toml  README.md
crates/echo-session-service/src/: main.rs
crates/echo-session-ws-gateway/: Cargo.toml  README.md
crates/echo-session-ws-gateway/assets/: dashboard.html
crates/echo-session-ws-gateway/src/: main.rs
crates/echo-tasks/: Cargo.toml  README.md
crates/echo-tasks/src/: lib.rs  method.rs  planner.rs  slaps.rs
crates/echo-trace/: Cargo.toml  README.md
crates/echo-trace/src/: lib.rs
crates/echo-ttd/: Cargo.toml  README.md
crates/echo-ttd/src/: compliance.rs  lib.rs
crates/echo-wasm-abi/: Cargo.toml  README.md
crates/echo-wasm-abi/src/: canonical.rs  codec.rs  eintlog.rs  kernel_port.rs  lib.rs  ttd.rs  witnessed_suffix_tests.rs
crates/echo-wasm-abi/tests/: canonical_vectors.rs  codec.rs  fuzz_wire.rs  jedit_rope_cross_boundary.rs  jedit_rope_cross_boundary_eint.rs  non_canonical_floats.rs
crates/echo-wasm-bindings/: Cargo.toml  README.md
crates/echo-wasm-bindings/src/: lib.rs  ttd.rs
crates/echo-wasm-bindings/tests/: api_tests.rs  ttd_tests.rs
docs/: BEARING.md  BENCHMARK_GUIDE.md  DETERMINISTIC_MATH.md  DOCS_AUDIT.md  GH-ISSUES-JAN.md  ISSUES_MATRIX.md  METHODOLOGY.md  NORTHSTAR.md  README.md  RELEASE_POLICY.md  ROADMAP.md  ROLLBACK_TTD.md  SPEC_DETERMINISTIC_MATH.md  THEORY.md  Untitled.md  WARP-GRAPH.md  WARP_DRIFT.md  Weekly Echo 2.md  WorkItems.md  aion-papers-bridge.md  append-only-invariants.md  architecture-outline.md  blake3-audit-checklist.md  branch-merge-playbook.md  capability-ownership-matrix.md  code-map.md  codex-implementation-checklist.md  codex-instrumentation.md  decision-log.md  (+85 more)
xtask/: Cargo.toml
xtask/src/: hello_echo.rs  main.rs  provider_lowerer_component.rs
(+1661 files in other folders)
