# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[workspace]
members = [
    "crates/warp-core",
    "crates/warp-ffi",
    "crates/warp-wasm",
    "crates/warp-cli",
    "crates/warp-geom",
    "crates/warp-benches",
    "crates/warp-viewer",
    "crates/echo-app-core",
    "crates/echo-config-fs",
    "crates/echo-session-proto",
    "crates/echo-session-service",
    "crates/echo-session-client",
    "crates/echo-graph",
    "crates/echo-wasm-abi",
    "crates/echo-session-ws-gateway",
    "specs/spec-000-rewrite",
    "crates/echo-wasm-bindings",
    "crates/echo-wesley-gen",
    "xtask"
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/echo"
rust-version = "1.90.0"

[workspace.dependencies]
echo-app-core = { version = "0.1.0", path = "crates/echo-app-core" }
echo-config-fs = { version = "0.1.0", path = "crates/echo-config-fs" }
echo-graph = { version = "0.1.0", path = "crates/echo-graph" }
echo-session-client = { version = "0.1.0", path = "crates/echo-session-client" }
echo-session-proto = { version = "0.1.0", path = "crates/echo-session-proto" }
echo-wasm-abi = { version = "0.1.0", path = "crates/echo-wasm-abi" }
warp-core = { version = "0.1.0", path = "crates/warp-core" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.bench]
# Derive from release but optimize for throughput and faster builds
opt-level = 3
lto = false
codegen-units = 16
debug = true
strip = false
