# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[workspace]
members = [
    "crates/echo-scene-codec",
    "crates/echo-scene-port",
    "crates/warp-core",
    "crates/warp-ffi",
    "crates/warp-wasm",
    "crates/warp-cli",
    "crates/warp-geom",
    "crates/warp-benches",
    "crates/warp-viewer",
    "crates/echo-app-core",
    "crates/echo-config-fs",
    "crates/echo-session-proto",
    "crates/echo-session-service",
    "crates/echo-session-client",
    "crates/echo-graph",
    "crates/echo-dind-harness",
    "crates/echo-dind-tests",
    "crates/echo-wasm-abi",
    "crates/echo-registry-api",
    "crates/echo-session-ws-gateway",
    "crates/echo-ttd",
    "crates/ttd-browser",
    "crates/ttd-manifest",
    "specs/spec-000-rewrite",
    "crates/echo-wasm-bindings",
    "crates/echo-wesley-gen",
    "crates/echo-ttd-gen",
    "crates/ttd-protocol-rs",
    "crates/echo-dry-tests",
    "crates/echo-cas",
    "xtask"
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/echo"
rust-version = "1.90.0"

[workspace.dependencies]
echo-app-core = { version = "0.1.0", path = "crates/echo-app-core" }
echo-cas = { version = "0.1.0", path = "crates/echo-cas" }
echo-config-fs = { version = "0.1.0", path = "crates/echo-config-fs" }
echo-dind-harness = { version = "0.1.0", path = "crates/echo-dind-harness" }
echo-dind-tests = { version = "0.1.0", path = "crates/echo-dind-tests" }
echo-dry-tests = { version = "0.1.0", path = "crates/echo-dry-tests" }
echo-graph = { version = "0.1.0", path = "crates/echo-graph" }
echo-registry-api = { version = "0.1.0", path = "crates/echo-registry-api" }
echo-scene-codec = { version = "0.1.0", path = "crates/echo-scene-codec" }
echo-scene-port = { version = "0.1.0", path = "crates/echo-scene-port" }
echo-session-client = { version = "0.1.0", path = "crates/echo-session-client" }
echo-session-proto = { version = "0.1.0", path = "crates/echo-session-proto" }
echo-session-service = { version = "0.1.0", path = "crates/echo-session-service" }
echo-session-ws-gateway = { version = "0.1.0", path = "crates/echo-session-ws-gateway" }
echo-ttd = { version = "0.1.0", path = "crates/echo-ttd" }
echo-wasm-abi = { version = "0.1.0", path = "crates/echo-wasm-abi" }
ttd-browser = { version = "0.1.0", path = "crates/ttd-browser" }
ttd-manifest = { version = "0.1.0", path = "crates/ttd-manifest" }
ttd-protocol-rs = { version = "0.1.0", path = "crates/ttd-protocol-rs" }
warp-core = { version = "0.1.0", path = "crates/warp-core" }
warp-wasm = { version = "0.1.0", path = "crates/warp-wasm" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.bench]
# Derive from release but optimize for throughput and faster builds
opt-level = 3
lto = false
codegen-units = 16
debug = true
strip = false
