# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[workspace]
members = [
    "crates/warp-core",

    "crates/warp-wasm",
    "crates/warp-cli",
    "crates/warp-geom",
    "crates/warp-benches",
    "crates/warp-viewer",
    "crates/echo-app-core",
    "crates/echo-config-fs",
    "crates/echo-session-proto",
    "crates/echo-session-service",
    "crates/echo-session-client",
    "crates/echo-graph",
    "crates/echo-dind-harness",
    "crates/echo-dind-tests",
    "crates/echo-wasm-abi",
    "crates/echo-registry-api",
    "crates/echo-session-ws-gateway",
    "specs/spec-000-rewrite",
    "crates/echo-wasm-bindings",
    "crates/echo-wesley-gen",
    "crates/echo-dry-tests",
    "crates/echo-cas",
    "crates/echo-scene-port",
    "crates/echo-scene-codec",
    "crates/ttd-browser",
    "crates/ttd-protocol-rs",
    "crates/ttd-manifest",
    "crates/echo-ttd",
    "xtask"
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/echo"
rust-version = "1.90.0"

[workspace.dependencies]
echo-app-core = { version = "0.1.0", path = "crates/echo-app-core" }
echo-cas = { version = "0.1.0", path = "crates/echo-cas" }
echo-config-fs = { version = "0.1.0", path = "crates/echo-config-fs" }
echo-dind-tests = { version = "0.1.0", path = "crates/echo-dind-tests" }
echo-dry-tests = { version = "0.1.0", path = "crates/echo-dry-tests" }
echo-graph = { version = "0.1.0", path = "crates/echo-graph" }
echo-registry-api = { version = "0.1.0", path = "crates/echo-registry-api" }
echo-scene-codec = { version = "0.1.0", path = "crates/echo-scene-codec" }
echo-scene-port = { version = "0.1.0", path = "crates/echo-scene-port" }
echo-session-client = { version = "0.1.0", path = "crates/echo-session-client" }
echo-session-proto = { version = "0.1.1", path = "crates/echo-session-proto" }
echo-wasm-abi = { version = "0.1.0", path = "crates/echo-wasm-abi" }
warp-core = { version = "0.1.1", path = "crates/warp-core" }
ttd-browser = { version = "0.1.0", path = "crates/ttd-browser" }
ttd-protocol-rs = { version = "0.1.0", path = "crates/ttd-protocol-rs" }
ttd-manifest = { version = "0.1.0", path = "crates/ttd-manifest" }
echo-ttd = { version = "0.1.0", path = "crates/echo-ttd" }

# ── Workspace-wide lint policy ──────────────────────────────────────
# Maximum strictness. Crates opt in via `[lints] workspace = true`.
# Per-crate overrides go in that crate's `[lints]` table.
[workspace.lints.rust]
missing_docs = "deny"
rust_2018_idioms = "deny"
unused_must_use = "deny"
# deny (not forbid) so WASM/FFI crates can #![allow(unsafe_code)] locally
unsafe_code = "deny"

[workspace.lints.clippy]
# Lint groups — all promoted to deny
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Anti-pattern lints — explicit deny
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Pedantic overrides — allow where too noisy for this codebase
must_use_candidate = "allow"
return_self_not_must_use = "allow"
unreadable_literal = "allow"
missing_const_for_fn = "allow"
suboptimal_flops = "allow"
redundant_pub_crate = "allow"
many_single_char_names = "allow"
module_name_repetitions = "allow"
use_self = "allow"
# Nursery overrides — too noisy or false-positive-prone
cognitive_complexity = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
# Pedantic overrides — low signal-to-noise for this codebase
doc_markdown = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
too_long_first_doc_paragraph = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
trivially_copy_pass_by_ref = "allow"
needless_collect = "allow"
manual_let_else = "allow"
needless_pass_by_value = "allow"
# cargo group overrides
multiple_crate_versions = "allow"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.bench]
# Derive from release but optimize for throughput and faster builds
opt-level = 3
lto = false
codegen-units = 16
debug = true
strip = false
