# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
rust-version = "1.90.0"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
pulldown-cmark = { version = "0.13", default-features = false }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warp-cli = { path = "../crates/warp-cli", version = "0.1.0" }


[lints]
workspace = true
