# SPDX-License-Identifier: Apache-2.0 OR MIND-UCAL-1.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[package]
name = "jitosd"
version = "0.1.0"
edition = "2021"
description = "JITOS Daemon"
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/echo"
readme = "README.md"
keywords = ["jitos", "daemon"]
categories = ["os"]

[dependencies]
echo-kernel = { path = "../../crates/echo-kernel" }
echo-tasks = { path = "../../crates/echo-tasks" } # Added dependency
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["trace"] }
http = "1.1.0"
