# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[package]
name = "echo-app-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
license = "Apache-2.0"
description = "Core application services for Echo tools (config, toasts, prefs)"
repository = "https://github.com/flyingrobots/echo"
readme = "README.md"
keywords = ["echo", "config", "toast", "prefs"]
categories = ["development-tools", "config"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
