# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[package]
name = "echo-edict-canonical"
version = "0.1.0"
edition = "2021"
rust-version = "1.90.0"
description = "Pure Echo implementation of Edict canonical CBOR and artifact digest framing."
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/echo"
readme = "README.md"
keywords = ["echo", "edict", "cbor", "canonical", "deterministic"]
categories = ["encoding", "development-tools"]

[dependencies]
hex = "0.4"
sha2 = "0.10"

[lints]
workspace = true
