# SPDX-License-Identifier: Apache-2.0 OR MIND-UCAL-1.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[package]
name = "echo-net"
version = "0.1.0"
edition = "2021"
description = "JITOS Network Layer"
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/echo"
readme = "README.md"
keywords = ["jitos", "network", "rpc"]
categories = ["network-programming"]

[dependencies]
