# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[package]
name = "echo-scene-codec"
version = "0.1.0"
edition = "2021"
description = "CBOR codec and test harness for echo-scene-port"
license = "Apache-2.0 OR MIND-UCAL-1.0"

[dependencies]
echo-scene-port = { path = "../echo-scene-port" }
minicbor = { version = "0.24", features = ["alloc"] }

[dev-dependencies]
