# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[package]
name = "echo-scene-codec"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "CBOR codec and test harness for echo-scene-port"
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/echo"
readme = "README.md"
keywords = ["echo", "scene", "codec", "cbor"]
categories = ["encoding", "graphics"]

[dependencies]
echo-scene-port = { workspace = true }
minicbor = { version = "0.24", features = ["alloc"] }

[features]
default = ["std"]
std = ["echo-scene-port/std"]

[dev-dependencies]
rand = "0.8"
hex = "0.4"
