# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[package]
name = "echo-scene-port"
version = "0.1.0"
edition = "2021"
description = "Scene rendering port contract for Echo TTD"
license = "Apache-2.0 OR MIND-UCAL-1.0"

[dependencies]
# NO dependencies. Pure types only.

[features]
default = ["std"]
std = []
