# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[package]
name = "echo-wasm-abi"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
description = "Shared WASM-friendly DTOs for Echo/JITOS living specs (graph + rewrite types)"
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/echo"
readme = "README.md"
keywords = ["echo", "rmg", "wasm", "abi", "dto"]
categories = ["encoding", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
