# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[package]
name = "echo-wasm-abi"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
description = "Shared WASM-friendly DTOs for Echo/JITOS living specs (graph + rewrite types)"
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/echo"
readme = "README.md"
keywords = ["echo", "warp", "wasm", "abi", "dto"]
categories = ["wasm", "encoding", "data-structures"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
ciborium = { version = "0.2", default-features = false }
serde-value = { version = "0.7" }
half = { version = "2.4", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0" }

[features]
default = ["std"]
std = [
    "serde/std",
    "ciborium/std",
    "half/std",
]
alloc = []

[dev-dependencies]
proptest = "1.0"
serde_json = "1.0"