# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[package]
name = "echo-wasm-bindings"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "WASM bindings shim for Echo/JITOS specs: minimal RMG+rewrite API exposed via wasm-bindgen"
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/echo"
readme = "README.md"
keywords = ["echo", "rmg", "wasm", "bindings"]
categories = ["wasm", "encoding", "api-bindings"]

[dependencies]
echo-wasm-abi = { version = "0.1.0", path = "../echo-wasm-abi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["wasm-bindgen"]
