# SPDX-License-Identifier: Apache-2.0
# © James Ross Ω FLYING•ROBOTS <https://github.com/flyingrobots>
[package]
name = "echo-wasm-bindings"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
description = "WASM bindings shim for Echo/JITOS specs: minimal WARP graph+rewrite API exposed via wasm-bindgen"
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/echo"
readme = "README.md"
keywords = ["echo", "warp", "wasm", "bindings"]
categories = ["wasm", "encoding", "api-bindings"]

[dependencies]
echo-wasm-abi.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
wasm = ["wasm-bindgen"]
